# restbench

./: bench.js  docker-compose.yml  package-lock.json  package.json  restbench.code-workspace
.initdb.d/: 00-init.sql
cpp/drogon/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  conanfile.txt
cpp/drogon/src/: main.cpp
cpp/drogon/src/config/: config.cpp  config.h
cpp/drogon/src/transcript/: controller.cpp  controller.h  service.h  transcript.h
elixir/phoenix/: .gitignore  README.md  mix.exs  run-prod.sh
elixir/phoenix/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
elixir/phoenix/lib/: rest_bench.ex  rest_bench_web.ex
elixir/phoenix/lib/rest_bench/: application.ex  cassandra.ex  crypto.ex  mailer.ex  repo.ex  users.ex
elixir/phoenix/lib/rest_bench_web/: base_controller.ex  endpoint.ex  error_json.ex  router.ex  telemetry.ex
elixir/phoenix/priv/repo/: seeds.exs
elixir/phoenix/test/: test_helper.exs
elixir/phoenix/test/support/: conn_case.ex  data_case.ex
go/fiber/: .env.example  .gitignore  go.mod  go.sum  out.diff
go/fiber/cmd/: main.go
go/fiber/internal/auth/: domain.go  router.go
go/fiber/internal/cassandra/: cassandra.go
go/fiber/internal/config/: config.go
go/fiber/internal/database/: database.go
go/fiber/internal/logger/: logger.go
go/fiber/internal/passwordhasher/: passwordhasher.go
go/fiber/internal/request/: request.go
go/fiber/internal/response/: error.go  success.go
go/fiber/migrations/: 20230728224400_init.sql
results/: bench-elixir-64-1690918339083.json  bench-go-64-1690918291904.json
(+23 files in other folders)
